--- a/src/administrador/FXMLFormularioAltaAdministrador.fxml
+++ b/src/administrador/FXMLFormularioAltaAdministrador.fxml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="administrador.FXMLFormularioAltaAdministradorController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="administrador.FXMLFormularioAltaAdministradorController">
+   <children>
+      <Label layoutX="206.0" layoutY="39.0" text="Registro de Administradores">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="90.0" text="Por favor, llena el siguiente formulario con la información del Administrador a registrar" />
+      <Label layoutX="39.0" layoutY="145.0" text="Nombre (s)" />
+      <Label layoutX="39.0" layoutY="200.0" text="Apellido Paterno" />
+      <Label layoutX="39.0" layoutY="253.0" text="Apellido Materno" />
+      <Label layoutX="320.0" layoutY="145.0" text="Correo Electrónico" />
+      <Label layoutX="320.0" layoutY="200.0" text="Contraseña" />
+      <TextField fx:id="tfNombre" layoutX="39.0" layoutY="163.0" prefHeight="25.0" prefWidth="224.0" />
+      <TextField fx:id="tfCorreo" layoutX="320.0" layoutY="163.0" prefHeight="25.0" prefWidth="255.0" />
+      <TextField fx:id="tfPaterno" layoutX="37.0" layoutY="218.0" prefHeight="25.0" prefWidth="189.0" />
+      <TextField fx:id="tfMaterno" layoutX="37.0" layoutY="270.0" prefHeight="25.0" prefWidth="189.0" />
+      <TextField fx:id="tfPassword" layoutX="321.0" layoutY="218.0" />
+      <Button layoutX="274.0" layoutY="329.0" mnemonicParsing="false" onAction="#clicGuardarAdministrador" text="Guardar" />
+   </children>
 </AnchorPane>
