--- a/src/administrador/FXMLEditarAdministrador.fxml
+++ b/src/administrador/FXMLEditarAdministrador.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="administrador.FXMLEditarAdministradorController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="administrador.FXMLEditarAdministradorController">
    <children>
-      <TableView layoutX="23.0" layoutY="154.0" prefHeight="200.0" prefWidth="555.0">
+      <TableView fx:id="tbAdministrador" layoutX="23.0" layoutY="154.0" prefHeight="200.0" prefWidth="555.0">
         <columns>
           <TableColumn fx:id="tcId" prefWidth="41.0" text="ID" />
           <TableColumn fx:id="tcNombre" prefWidth="109.0" text="Nombre (s)" />
