--- a/src/administrador/FXMLFormularioAltaAdministrador.fxml
+++ b/src/administrador/FXMLFormularioAltaAdministrador.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="administrador.FXMLFormularioAltaAdministradorController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="administrador.FXMLFormularioAltaAdministradorController">
    <children>
       <Label layoutX="206.0" layoutY="39.0" text="Registro de Administradores">
          <font>
@@ -20,12 +20,12 @@
       <Label layoutX="39.0" layoutY="253.0" text="Apellido Materno" />
       <Label layoutX="320.0" layoutY="145.0" text="Correo Electrónico" />
       <Label layoutX="320.0" layoutY="200.0" text="Contraseña" />
-      <TextField fx:id="tfNombre" layoutX="36.0" layoutY="163.0" prefHeight="25.0" prefWidth="224.0" />
-      <TextField fx:id="tfCorreo" layoutX="320.0" layoutY="163.0" prefHeight="25.0" prefWidth="255.0" />
-      <TextField fx:id="tfPaterno" layoutX="37.0" layoutY="218.0" prefHeight="25.0" prefWidth="189.0" />
-      <TextField fx:id="tfMaterno" layoutX="37.0" layoutY="270.0" prefHeight="25.0" prefWidth="189.0" />
-      <Button layoutX="321.0" layoutY="323.0" mnemonicParsing="false" onAction="#clicGuardarAdministrador" text="Guardar" />
+      <TextField fx:id="tfNombre" layoutX="36.0" layoutY="163.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa tu nombre" />
+      <TextField fx:id="tfPaterno" layoutX="37.0" layoutY="218.0" prefHeight="25.0" prefWidth="189.0" promptText="Ingresa tu apellido paterno" />
+      <TextField fx:id="tfMaterno" layoutX="37.0" layoutY="270.0" prefHeight="25.0" prefWidth="189.0" promptText="Ingresa tu apellido materno" />
+      <TextField fx:id="tfCorreo" layoutX="320.0" layoutY="163.0" prefHeight="25.0" prefWidth="255.0" promptText="Ingresa tu correo" />
       <PasswordField fx:id="pfPassword" layoutX="321.0" layoutY="218.0" />
-      <Button layoutX="243.0" layoutY="323.0" mnemonicParsing="false" onAction="#clicCancelar" text="Cancelar" />
+      <Button layoutX="321.0" layoutY="323.0" mnemonicParsing="false" onAction="#clicGuardarAdministrador" text="Guardar" />
+      <Button fx:id="btnCancelar" layoutX="243.0" layoutY="323.0" mnemonicParsing="false" onAction="#clicCancelar" text="Cancelar" />
    </children>
 </AnchorPane>
