--- a/src/promociones/FXMLFormularioAltaPromocion.fxml
+++ b/src/promociones/FXMLFormularioAltaPromocion.fxml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="promociones.FXMLFormularioAltaPromocionController">
-    
+<AnchorPane id="AnchorPane" prefHeight="483.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16" fx:controller="promociones.FXMLFormularioAltaPromocionController">
+   <children>
+      <Label layoutX="246.0" layoutY="14.0" text="Registro de Promociones">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="90.0" layoutY="41.0" text="Por favor, llena el siguiente formulario con la información de la promoción a registrar" />
+      <Label layoutX="39.0" layoutY="79.0" text="Nombre" />
+      <TextField fx:id="tfNombre" layoutX="36.0" layoutY="97.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa el nombre" />
+      <Label layoutX="39.0" layoutY="134.0" text="Dirección" />
+      <TextField fx:id="tfDescripcion" layoutX="37.0" layoutY="152.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa la descripción" />
+      <Label layoutX="39.0" layoutY="187.0" text="Fecha Inicio" />
+      <DatePicker fx:id="dpFechaInicio" layoutX="39.0" layoutY="205.0" prefHeight="25.0" prefWidth="216.0" promptText="Selecciona la fecha de inicio" />
+      <Label layoutX="36.0" layoutY="243.0" text="Fecha Termino" />
+      <DatePicker fx:id="dpFechaTermino" layoutX="39.0" layoutY="260.0" prefHeight="25.0" prefWidth="216.0" promptText="Selecciona la fecha de termino" />
+      <Label layoutX="34.0" layoutY="300.0" text="Restricciones" />
+      <TextField fx:id="tfRestricciones" layoutX="36.0" layoutY="324.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa las restricciones" />
+      <Label layoutX="39.0" layoutY="364.0" text="Tipo de Promocion" />
+      <ComboBox fx:id="cbTipoPromocion" layoutX="37.0" layoutY="396.0" prefHeight="25.0" prefWidth="224.0" promptText="Selecciona el tipo de promoción" />
+      <Label layoutX="304.0" layoutY="75.0" text="Porcentaje" />
+      <TextField fx:id="tfPorcentaje" layoutX="306.0" layoutY="93.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa la promoción" />
+      <Label layoutX="309.0" layoutY="128.0" text="Costo" />
+      <TextField fx:id="tfCostoPromocion" layoutX="306.0" layoutY="145.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa el costo de la promocion" />
+      <Label layoutX="307.0" layoutY="187.0" text="Categoría" />
+      <ComboBox fx:id="cbCategoria" layoutX="306.0" layoutY="217.0" prefHeight="25.0" prefWidth="224.0" promptText="Selecciona la categoría" />
+      <Label layoutX="311.0" layoutY="286.0" text="Estatus" />
+      <ComboBox fx:id="cbEstatus" layoutX="306.0" layoutY="307.0" prefHeight="25.0" prefWidth="224.0" promptText="Selecciona el estatus" />
+      <Label layoutX="311.0" layoutY="364.0" text="Sucursal" />
+      <ComboBox fx:id="cbSucursal" layoutX="306.0" layoutY="385.0" prefHeight="25.0" prefWidth="224.0" promptText="Selecciona la sucursal" />
+      <Button fx:id="btnGuardar" layoutX="320.0" layoutY="434.0" mnemonicParsing="false" onAction="#clicGuardarPromocion" text="Guardar" />
+      <Button fx:id="btnCancelar" layoutX="242.0" layoutY="434.0" mnemonicParsing="false" onAction="#clicCancelar" text="Cancelar" />
+   </children>    
 </AnchorPane>
