--- a/src/sucursales/FXMLFormularioAltaSucursal.fxml
+++ b/src/sucursales/FXMLFormularioAltaSucursal.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -7,36 +11,39 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16" fx:controller="sucursales.FXMLFormularioAltaSucursalController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #0A4962;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sucursales.FXMLFormularioAltaSucursalController">
    <children>
-      <Label layoutX="246.0" layoutY="25.0" text="Registro de Sucursales">
+      <Label layoutX="210.0" layoutY="14.0" text="Registro de Sucursales" textFill="WHITE">
          <font>
-            <Font size="15.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="88.0" layoutY="53.0" text="Por favor, llena el siguiente formulario con la información de la sucursal a registrar" />
-      <Label layoutX="39.0" layoutY="79.0" text="Nombre" />
+      <Label layoutX="75.0" layoutY="48.0" text="Por favor, llena el siguiente formulario con la información de la sucursal a registrar" textFill="WHITE">
+         <font>
+            <Font size="13.0" />
+         </font></Label>
+      <Label layoutX="39.0" layoutY="79.0" text="Nombre" textFill="WHITE" />
       <TextField fx:id="tfNombre" layoutX="36.0" layoutY="97.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa el nombre" />
-      <Label layoutX="39.0" layoutY="134.0" text="Dirección" />
+      <Label layoutX="39.0" layoutY="134.0" text="Dirección" textFill="WHITE" />
       <TextField fx:id="tfDireccion" layoutX="37.0" layoutY="152.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa la dirección" />
-      <Label layoutX="39.0" layoutY="187.0" text="Código Postal" />
+      <Label layoutX="39.0" layoutY="187.0" text="Código Postal" textFill="WHITE" />
       <TextField fx:id="tfCP" layoutX="37.0" layoutY="204.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa el código postal" />
-      <Label layoutX="36.0" layoutY="243.0" text="Colonia" />
+      <Label layoutX="36.0" layoutY="243.0" text="Colonia" textFill="WHITE" />
       <TextField fx:id="tfColonia" layoutX="36.0" layoutY="261.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa la colonia" />
-      <Label layoutX="34.0" layoutY="300.0" text="Ciudad" />
+      <Label layoutX="34.0" layoutY="300.0" text="Ciudad" textFill="WHITE" />
       <TextField fx:id="tfCiudad" layoutX="36.0" layoutY="324.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa la colonia" />
-      <Label layoutX="305.0" layoutY="79.0" text="Teléfono" />
-      <TextField fx:id="tfTelefono" layoutX="307.0" layoutY="103.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa el teléfono" />
-      <Label layoutX="305.0" layoutY="134.0" text="Latitud" />
+      <Label layoutX="305.0" layoutY="79.0" text="Teléfono" textFill="WHITE" />
+      <TextField fx:id="tfTelefono" layoutX="307.0" layoutY="97.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa el teléfono" />
+      <Label layoutX="305.0" layoutY="134.0" text="Latitud" textFill="WHITE" />
       <TextField fx:id="tfLatitud" layoutX="307.0" layoutY="152.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa la latitud" />
-      <Label layoutX="310.0" layoutY="187.0" text="Longitud" />
+      <Label layoutX="310.0" layoutY="187.0" text="Longitud" textFill="WHITE" />
       <TextField fx:id="tfLongitud" layoutX="307.0" layoutY="204.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa la longitud" />
-      <Label layoutX="310.0" layoutY="240.0" text="Encargado" />
+      <Label layoutX="310.0" layoutY="240.0" text="Encargado" textFill="WHITE" />
       <TextField fx:id="tfEncargado" layoutX="307.0" layoutY="257.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa el nombre encargado" />
-      <Label layoutX="310.0" layoutY="303.0" text="Empresa" />
-      <ComboBox fx:id="cbEmpresa" layoutX="305.0" layoutY="324.0" prefHeight="25.0" prefWidth="224.0" promptText="Selecciona la empresa" />
-      <Button fx:id="btnGuardar" layoutX="321.0" layoutY="361.0" mnemonicParsing="false" onAction="#clicGuardarSucursal" text="Guardar" />
-      <Button fx:id="btnCancelar" layoutX="243.0" layoutY="361.0" mnemonicParsing="false" onAction="#clicCancelar" text="Cancelar" />
+      <Label layoutX="310.0" layoutY="303.0" text="Empresa" textFill="WHITE" />
+      <ComboBox fx:id="cbEmpresa" layoutX="305.0" layoutY="324.0" prefHeight="25.0" prefWidth="224.0" promptText="Selecciona la empresa" style="-fx-background-color: white;" />
+      <Button fx:id="btnGuardar" layoutX="314.0" layoutY="365.0" mnemonicParsing="false" onAction="#clicGuardarSucursal" style="-fx-background-color: white;" text="Guardar" />
+      <Button fx:id="btnCancelar" layoutX="228.0" layoutY="365.0" mnemonicParsing="false" onAction="#clicCancelar" style="-fx-background-color: white;" text="Cancelar" />
    </children>
     
 </AnchorPane>
