--- a/src/sucursales/FXMLGeneralSucursal.fxml
+++ b/src/sucursales/FXMLGeneralSucursal.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
@@ -30,13 +31,43 @@
       </TableView>
       <Button fx:id="btnAdd" layoutX="168.0" layoutY="76.0" mnemonicParsing="false" onAction="#ventanaAdd" style="-fx-background-color: white;" text="Añadir" />
       <Button fx:id="btEdit" layoutX="324.0" layoutY="76.0" mnemonicParsing="false" onAction="#ventanaEdit" style="-fx-background-color: white;" text="Editar" />
-      <Button fx:id="btnDelete" layoutX="496.0" layoutY="76.0" mnemonicParsing="false" onAction="#eliminar" style="-fx-background-color: white;" text="Eliminar" />
-      <Label layoutX="35.0" layoutY="127.0" text="Ingresa tu búsqueda" textFill="WHITE" />
+      <Button fx:id="btnDelete" layoutX="491.0" layoutY="76.0" mnemonicParsing="false" onAction="#eliminar" style="-fx-background-color: white;" text="Eliminar" />
+      <Label layoutX="51.0" layoutY="127.0" text="Ingresa tu búsqueda:" textFill="WHITE" />
       <TextField fx:id="tfBusqueda" layoutX="168.0" layoutY="123.0" prefHeight="25.0" prefWidth="323.0" promptText="Ingresa el nombre o la dirección de la sucusal a buscar" />
       <Label layoutX="303.0" layoutY="14.0" text="Sucursales" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
+      <ImageView fitHeight="61.0" fitWidth="119.0" layoutX="37.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/Tickets.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="292.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/editar.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="137.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/añadir.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="458.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/eliminar.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="401.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/sucursales.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="23.0" fitWidth="16.0" layoutX="34.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/buscar.png" />
+         </image>
+      </ImageView>
    </children>    
 </AnchorPane>
