--- a/src/administrador/FXMLFormularioAltaAdministrador.fxml
+++ b/src/administrador/FXMLFormularioAltaAdministrador.fxml
@@ -33,11 +33,16 @@
       <TextField fx:id="tfMaterno" layoutX="37.0" layoutY="270.0" prefHeight="25.0" prefWidth="189.0" promptText="Ingresa tu apellido materno" />
       <TextField fx:id="tfCorreo" layoutX="320.0" layoutY="163.0" prefHeight="25.0" prefWidth="255.0" promptText="Ingresa tu correo" />
       <PasswordField fx:id="pfPassword" layoutX="321.0" layoutY="218.0" promptText="•••••••••••••••" />
-      <Button fx:id="btnGuardar" layoutX="307.0" layoutY="323.0" mnemonicParsing="false" onAction="#clicGuardarAdministrador" style="-fx-background-color: white;" text="Guardar" />
-      <Button fx:id="btnCancelar" layoutX="229.0" layoutY="323.0" mnemonicParsing="false" onAction="#clicCancelar" style="-fx-background-color: white;" text="Cancelar" />
-      <ImageView fitHeight="66.0" fitWidth="108.0" layoutX="30.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+      <Button fx:id="btnGuardar" layoutX="322.0" layoutY="320.0" mnemonicParsing="false" onAction="#clicGuardarAdministrador" style="-fx-background-color: white;" text="Guardar" />
+      <Button fx:id="btnCancelar" layoutX="220.0" layoutY="320.0" mnemonicParsing="false" onAction="#clicCancelar" style="-fx-background-color: white;" text="Cancelar" />
+      <ImageView fitHeight="61.0" fitWidth="119.0" layoutX="37.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../imagenes/cuponexLogo.jpg" />
+            <Image url="@../imagenes/Tickets.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="170.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/añadir.png" />
          </image>
       </ImageView>
    </children>
