--- a/src/sucursales/FXMLFormularioEdicionSucursal.fxml
+++ b/src/sucursales/FXMLFormularioEdicionSucursal.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -13,7 +14,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #0A4962;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sucursales.FXMLFormularioEdicionSucursalController">
    <children>
-      <Label layoutX="215.0" layoutY="26.0" text="Actualización de datos" textFill="WHITE">
+      <Label layoutX="215.0" layoutY="13.0" text="Actualización de datos" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -42,7 +43,12 @@
       <TextField fx:id="tfEncargado" layoutX="307.0" layoutY="257.0" prefHeight="25.0" prefWidth="224.0" promptText="Ingresa el nombre encargado" />
       <Label layoutX="310.0" layoutY="301.0" text="Empresa" textFill="WHITE" />
       <ComboBox fx:id="cbEmpresa" layoutX="305.0" layoutY="323.0" prefHeight="25.0" prefWidth="224.0" promptText="Selecciona la empresa" style="-fx-background-color: white;" />
-      <Button fx:id="btnActualizar" layoutX="309.0" layoutY="363.0" mnemonicParsing="false" onAction="#clicActualizarSucursal" style="-fx-background-color: white;" text="Actualizar" />
-      <Button fx:id="btnCancelar" layoutX="223.0" layoutY="363.0" mnemonicParsing="false" onAction="#clicCancelar" style="-fx-background-color: white;" text="Cancelar" />
+      <Button fx:id="btnActualizar" layoutX="311.0" layoutY="366.0" mnemonicParsing="false" onAction="#clicActualizarSucursal" style="-fx-background-color: white;" text="Actualizar" />
+      <Button fx:id="btnCancelar" layoutX="221.0" layoutY="366.0" mnemonicParsing="false" onAction="#clicCancelar" style="-fx-background-color: white;" text="Cancelar" />
+      <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="186.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/editar.png" />
+         </image>
+      </ImageView>
    </children>    
 </AnchorPane>
