--- a/src/promociones/FXMLFormularioAltaPromocion.fxml
+++ b/src/promociones/FXMLFormularioAltaPromocion.fxml
@@ -20,7 +20,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="56.0" layoutY="53.0" text="Por favor, llena el siguiente formulario con la información de la promoción a registrar" textFill="WHITE">
+      <Label layoutX="56.0" layoutY="53.0" text="Por favor, llena el siguiente formulario con la información de la promoción a registrar." textFill="WHITE">
          <font>
             <Font size="13.0" />
          </font></Label>
