--- a/src/sucursales/FXMLFormularioAltaSucursal.fxml
+++ b/src/sucursales/FXMLFormularioAltaSucursal.fxml
@@ -19,7 +19,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="75.0" layoutY="48.0" text="Por favor, llena el siguiente formulario con la información de la sucursal a registrar" textFill="WHITE">
+      <Label layoutX="45.0" layoutY="51.0" text="Por favor, llena el siguiente formulario con la información de la sucursal a registrar." textFill="WHITE">
          <font>
             <Font size="13.0" />
          </font></Label>
