--- a/src/sucursales/FXMLFormularioEdicionSucursal.fxml
+++ b/src/sucursales/FXMLFormularioEdicionSucursal.fxml
@@ -19,7 +19,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="61.0" layoutY="53.0" text="Por favor, llena el siguiente formulario con la información de la sucursal a actualizar" textFill="WHITE">
+      <Label layoutX="61.0" layoutY="53.0" text="Por favor, llena el siguiente formulario con la información de la sucursal a actualizar." textFill="WHITE">
          <font>
             <Font size="13.0" />
          </font></Label>
