--- a/src/empresa/FXMLGeneralEmpresa.fxml
+++ b/src/empresa/FXMLGeneralEmpresa.fxml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #0A4962;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empresa.FXMLGeneralEmpresaController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #0A4962;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empresa.FXMLGeneralEmpresaController">
    <children>
       <TableView fx:id="tbEmpresa" layoutX="17.0" layoutY="160.0" prefHeight="270.0" prefWidth="667.0">
         <columns>
@@ -34,7 +32,7 @@
       <Button fx:id="btEdit" layoutX="324.0" layoutY="65.0" mnemonicParsing="false" onAction="#ventanaEdit" style="-fx-background-color: white;" text="Editar" />
       <Button fx:id="btnDelete" layoutX="468.0" layoutY="65.0" mnemonicParsing="false" onAction="#eliminar" style="-fx-background-color: white;" text="Eliminar" />
       <Label layoutX="54.0" layoutY="119.0" text="Ingresa tu búsqueda:" textFill="WHITE" />
-      <TextField fx:id="tfBusqueda" layoutX="168.0" layoutY="115.0" prefHeight="25.0" prefWidth="359.0" promptText="Ingresa el nombre, representante o RFC de la empresa a buscar" />
+      <TextField fx:id="tfBusqueda" layoutX="208.0" layoutY="115.0" prefHeight="25.0" prefWidth="359.0" promptText="Ingresa el nombre, representante o RFC de la empresa a buscar" />
       <Label layoutX="311.0" layoutY="14.0" text="Empresas" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
