--- a/src/sucursales/FXMLGeneralSucursal.fxml
+++ b/src/sucursales/FXMLGeneralSucursal.fxml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="700.0" style="-fx-background-color: #0A4962;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sucursales.FXMLGeneralSucursalController">
+<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="700.0" style="-fx-background-color: #0A4962;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sucursales.FXMLGeneralSucursalController">
    <children>
       <TableView fx:id="tbSucursal" layoutX="17.0" layoutY="160.0" prefHeight="270.0" prefWidth="667.0">
         <columns>
@@ -33,7 +31,7 @@
       <Button fx:id="btEdit" layoutX="324.0" layoutY="76.0" mnemonicParsing="false" onAction="#ventanaEdit" style="-fx-background-color: white;" text="Editar" />
       <Button fx:id="btnDelete" layoutX="491.0" layoutY="76.0" mnemonicParsing="false" onAction="#eliminar" style="-fx-background-color: white;" text="Eliminar" />
       <Label layoutX="51.0" layoutY="127.0" text="Ingresa tu búsqueda:" textFill="WHITE" />
-      <TextField fx:id="tfBusqueda" layoutX="168.0" layoutY="123.0" prefHeight="25.0" prefWidth="323.0" promptText="Ingresa el nombre o la dirección de la sucusal a buscar" />
+      <TextField fx:id="tfBusqueda" layoutX="227.0" layoutY="123.0" prefHeight="25.0" prefWidth="323.0" promptText="Ingresa el nombre o la dirección de la sucusal a buscar" />
       <Label layoutX="303.0" layoutY="14.0" text="Sucursales" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
